# kokoro

./: export_onnx.py  main.py  pyproject.toml
kokoro_batch/: __init__.py  istftnet.py  model.py  modules.py  tokenizer.py
