[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "kokoro-batch"
version = "0.9.4"
description = "TTS"
readme = "README.md"
authors = [
    { name="nimbleedge", email="team@nimbleedge.com" }
]
license = { file = "LICENSE" }
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent"
]
requires-python = ">=3.10, <3.13"
dependencies = [
    "huggingface_hub",
    "loguru",
    "numpy",
    "torch",
    "transformers"
]

[tool.hatch.build.targets.wheel]
only-include = ["kokoro_batch"]
only-packages = true
